Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -2811,6 +2811,438 @@
     "print(fitted.summary())"
    ]
   },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#Consider the size of the condition number and the range of the coefficients and expected errors vs absolute size of the coefficients themselves.\n",
+    "1. The condition number is large, 6.56e+05.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will Store the correlation coefficeints and p-values in a separate DataFrame for reference."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "//anaconda3/lib/python3.7/site-packages/scipy/stats/stats.py:3399: PearsonRConstantInputWarning: An input array is constant; the correlation coefficent is not defined.\n",
+      "  warnings.warn(PearsonRConstantInputWarning())\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Correlation_Coefficient</th>\n",
+       "      <th>P_Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>avg_price_per_kg</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Size_Grade_2S</th>\n",
+       "      <td>-0.352996</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Weight_Kg</th>\n",
+       "      <td>-0.337886</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Container_JE090</th>\n",
+       "      <td>-0.322235</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Province_EASTERN_CAPE</th>\n",
+       "      <td>-0.178531</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>High_Price</th>\n",
+       "      <td>-0.164496</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Size_Grade_2M</th>\n",
+       "      <td>-0.153372</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Container_AC030</th>\n",
+       "      <td>-0.144427</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Low_Price</th>\n",
+       "      <td>-0.141740</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Container_JG110</th>\n",
+       "      <td>-0.140148</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Container_IA400</th>\n",
+       "      <td>-0.355565</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Province_NATAL</th>\n",
+       "      <td>-0.379801</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Container_EF120</th>\n",
+       "      <td>0.114297</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Size_Grade_1M</th>\n",
+       "      <td>0.175779</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Container_EC120</th>\n",
+       "      <td>0.188162</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Size_Grade_1X</th>\n",
+       "      <td>0.251451</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Province_W.CAPE-BERGRIVER_ETC</th>\n",
+       "      <td>0.262051</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Size_Grade_1L</th>\n",
+       "      <td>0.280966</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Container_M4183</th>\n",
+       "      <td>0.403229</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sales_Total</th>\n",
+       "      <td>0.108473</td>\n",
+       "      <td>0.000002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Stock_On_Hand</th>\n",
+       "      <td>0.105028</td>\n",
+       "      <td>0.000003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2019-12-12</th>\n",
+       "      <td>0.097705</td>\n",
+       "      <td>0.000015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Size_Grade_2L</th>\n",
+       "      <td>-0.089733</td>\n",
+       "      <td>0.000072</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Total_Qty_Sold</th>\n",
+       "      <td>0.087536</td>\n",
+       "      <td>0.000108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Province_CAPE</th>\n",
+       "      <td>0.086135</td>\n",
+       "      <td>0.000139</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2019-12-11</th>\n",
+       "      <td>0.081792</td>\n",
+       "      <td>0.000298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2019-12-14</th>\n",
+       "      <td>0.079554</td>\n",
+       "      <td>0.000435</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2020-07-25</th>\n",
+       "      <td>-0.069507</td>\n",
+       "      <td>0.002122</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Size_Grade_2U</th>\n",
+       "      <td>-0.069457</td>\n",
+       "      <td>0.002137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2020-02-14</th>\n",
+       "      <td>0.068489</td>\n",
+       "      <td>0.002465</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2020-07-20</th>\n",
+       "      <td>-0.066150</td>\n",
+       "      <td>0.003457</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2020-07-23</th>\n",
+       "      <td>-0.065530</td>\n",
+       "      <td>0.003774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2020-01-08</th>\n",
+       "      <td>0.064911</td>\n",
+       "      <td>0.004117</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2020-02-03</th>\n",
+       "      <td>0.064384</td>\n",
+       "      <td>0.004432</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2020-02-05</th>\n",
+       "      <td>0.062756</td>\n",
+       "      <td>0.005544</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2020-02-22</th>\n",
+       "      <td>0.061230</td>\n",
+       "      <td>0.006809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Container_DT063</th>\n",
+       "      <td>-0.059579</td>\n",
+       "      <td>0.008465</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2020-06-13</th>\n",
+       "      <td>0.059537</td>\n",
+       "      <td>0.008512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2020-07-21</th>\n",
+       "      <td>-0.059140</td>\n",
+       "      <td>0.008962</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2020-04-17</th>\n",
+       "      <td>-0.056775</td>\n",
+       "      <td>0.012114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2020-01-13</th>\n",
+       "      <td>0.056351</td>\n",
+       "      <td>0.012772</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2020-05-07</th>\n",
+       "      <td>-0.055905</td>\n",
+       "      <td>0.013499</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Size_Grade_2X</th>\n",
+       "      <td>-0.051624</td>\n",
+       "      <td>0.022556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2020-03-10</th>\n",
+       "      <td>-0.051290</td>\n",
+       "      <td>0.023445</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2020-04-28</th>\n",
+       "      <td>-0.047655</td>\n",
+       "      <td>0.035263</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2020-08-24</th>\n",
+       "      <td>0.046822</td>\n",
+       "      <td>0.038595</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2020-07-22</th>\n",
+       "      <td>-0.045609</td>\n",
+       "      <td>0.043920</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2020-06-12</th>\n",
+       "      <td>0.044025</td>\n",
+       "      <td>0.051803</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2020-01-24</th>\n",
+       "      <td>0.042943</td>\n",
+       "      <td>0.057835</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2020-01-20</th>\n",
+       "      <td>0.042441</td>\n",
+       "      <td>0.060829</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2020-02-21</th>\n",
+       "      <td>0.042276</td>\n",
+       "      <td>0.061836</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2020-02-26</th>\n",
+       "      <td>-0.041815</td>\n",
+       "      <td>0.064739</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2020-07-17</th>\n",
+       "      <td>0.040710</td>\n",
+       "      <td>0.072142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2020-04-21</th>\n",
+       "      <td>-0.040027</td>\n",
+       "      <td>0.077053</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2020-05-13</th>\n",
+       "      <td>-0.039435</td>\n",
+       "      <td>0.081536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2020-04-29</th>\n",
+       "      <td>-0.038267</td>\n",
+       "      <td>0.090982</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2019-12-23</th>\n",
+       "      <td>0.038083</td>\n",
+       "      <td>0.092555</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date_2020-05-29</th>\n",
+       "      <td>-0.037519</td>\n",
+       "      <td>0.097482</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Correlation_Coefficient   P_Value\n",
+       "avg_price_per_kg                              1.000000  0.000000\n",
+       "Size_Grade_2S                                -0.352996  0.000000\n",
+       "Weight_Kg                                    -0.337886  0.000000\n",
+       "Container_JE090                              -0.322235  0.000000\n",
+       "Province_EASTERN_CAPE                        -0.178531  0.000000\n",
+       "High_Price                                   -0.164496  0.000000\n",
+       "Size_Grade_2M                                -0.153372  0.000000\n",
+       "Container_AC030                              -0.144427  0.000000\n",
+       "Low_Price                                    -0.141740  0.000000\n",
+       "Container_JG110                              -0.140148  0.000000\n",
+       "Container_IA400                              -0.355565  0.000000\n",
+       "Province_NATAL                               -0.379801  0.000000\n",
+       "Container_EF120                               0.114297  0.000000\n",
+       "Size_Grade_1M                                 0.175779  0.000000\n",
+       "Container_EC120                               0.188162  0.000000\n",
+       "Size_Grade_1X                                 0.251451  0.000000\n",
+       "Province_W.CAPE-BERGRIVER_ETC                 0.262051  0.000000\n",
+       "Size_Grade_1L                                 0.280966  0.000000\n",
+       "Container_M4183                               0.403229  0.000000\n",
+       "Sales_Total                                   0.108473  0.000002\n",
+       "Stock_On_Hand                                 0.105028  0.000003\n",
+       "Date_2019-12-12                               0.097705  0.000015\n",
+       "Size_Grade_2L                                -0.089733  0.000072\n",
+       "Total_Qty_Sold                                0.087536  0.000108\n",
+       "Province_CAPE                                 0.086135  0.000139\n",
+       "Date_2019-12-11                               0.081792  0.000298\n",
+       "Date_2019-12-14                               0.079554  0.000435\n",
+       "Date_2020-07-25                              -0.069507  0.002122\n",
+       "Size_Grade_2U                                -0.069457  0.002137\n",
+       "Date_2020-02-14                               0.068489  0.002465\n",
+       "Date_2020-07-20                              -0.066150  0.003457\n",
+       "Date_2020-07-23                              -0.065530  0.003774\n",
+       "Date_2020-01-08                               0.064911  0.004117\n",
+       "Date_2020-02-03                               0.064384  0.004432\n",
+       "Date_2020-02-05                               0.062756  0.005544\n",
+       "Date_2020-02-22                               0.061230  0.006809\n",
+       "Container_DT063                              -0.059579  0.008465\n",
+       "Date_2020-06-13                               0.059537  0.008512\n",
+       "Date_2020-07-21                              -0.059140  0.008962\n",
+       "Date_2020-04-17                              -0.056775  0.012114\n",
+       "Date_2020-01-13                               0.056351  0.012772\n",
+       "Date_2020-05-07                              -0.055905  0.013499\n",
+       "Size_Grade_2X                                -0.051624  0.022556\n",
+       "Date_2020-03-10                              -0.051290  0.023445\n",
+       "Date_2020-04-28                              -0.047655  0.035263\n",
+       "Date_2020-08-24                               0.046822  0.038595\n",
+       "Date_2020-07-22                              -0.045609  0.043920\n",
+       "Date_2020-06-12                               0.044025  0.051803\n",
+       "Date_2020-01-24                               0.042943  0.057835\n",
+       "Date_2020-01-20                               0.042441  0.060829\n",
+       "Date_2020-02-21                               0.042276  0.061836\n",
+       "Date_2020-02-26                              -0.041815  0.064739\n",
+       "Date_2020-07-17                               0.040710  0.072142\n",
+       "Date_2020-04-21                              -0.040027  0.077053\n",
+       "Date_2020-05-13                              -0.039435  0.081536\n",
+       "Date_2020-04-29                              -0.038267  0.090982\n",
+       "Date_2019-12-23                               0.038083  0.092555\n",
+       "Date_2020-05-29                              -0.037519  0.097482"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import pearsonr\n",
+    "\n",
+    "# Build a dictionary of correlation coefficients and p-values\n",
+    "dict_cp = {}\n",
+    "\n",
+    "column_titles = [col for col in corrs.index if col!= '']\n",
+    "for col in column_titles:\n",
+    "    p_val = round(pearsonr(df_dummies[col], df_dummies['avg_price_per_kg'])[1],6)\n",
+    "    dict_cp[col] = {'Correlation_Coefficient':corrs[col],\n",
+    "                    'P_Value':p_val}\n",
+    "\n",
+    "train_set_cp = pd.DataFrame(dict_cp).T\n",
+    "train_set_cp_sorted = train_set_cp.sort_values('P_Value')\n",
+    "train_set_cp_sorted[train_set_cp_sorted['P_Value']<0.1]"
+   ]
+  },
 
   {
    "cell_type": "markdown",
