Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -18,19 +18,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  [Team members](#import)\n",
-    "    1. Keletso Pule\n",
-    "    2. Khomotso Maake\n",
-    "    3. Jacques Stanjaak\n",
-    "    4. Harrison Hlongwane\n",
-    "    5. Bhalisa Sodo\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Table Of Contents\n",
     "### 1. [Introduction](#introduction)\n",
     "\n",
@@ -60,6 +47,7 @@
    "metadata": {},
    "source": [
     "## 1. Introduction <a name=\"introduction\"></a>\n",
+    "In this b\n",
     "There are various factors that contribute to the performance of a business.  Decisions to improve the performance have to be made given the known knowledge. In this project we are given data of Golden Delicious Apples and some parameters and will be  constructing a regression algorithm that will accurately predict how much a kilogram of the Apples will cost.\n"
    ]
   },
@@ -68,14 +56,37 @@
    "metadata": {},
    "source": [
     "### 1.1. Objective \n",
-    "In this notebook we will design a regression model that will predict the cost of apples based on given parameters."
+    "Our objective with this notebook is to design various multivariate regression models using different machine learning techniques to predict the cost of apples based on given historical data. Our objective is further to train our models with the data, to assess our models with training as well as unseen testing data, and to choose the model that best predicts the prices of apples. We also finally need to communicate our findings to an assessment board and to the world."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Parameters:\n",
+    "### 1.2. Use \n",
+    "This forms part of a Kaggle competition and is also a team assessment for the students at Explore Data Science Academy.\n",
+    "We hope that the research invested into building this product might also be used to further predictions of the prices of commodities and thereby help business in decision making."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.3. Team members\n",
+    "The team consists of five full-time students from Explore Data Science Academy who come from all walks of life and have been placed in a team for about 4 weeks under the supervision of Trevor Senyane.\n",
+    "1. Jacques Stander - group coordinator\n",
+    "2. Khomotso Maake\n",
+    "3. Keletso Pule\n",
+    "4. Harrison Hlongwane\n",
+    "5. Bhalisa Sodo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.4. Data source and descriptions\n",
+    "The data is provided for us on Kaggle in the form of two CSV files which is available to download. The data consists of 10 columns and is described as follows\n",
     "1. Province - Which province the produce was grown\n",
     "2. Container - The code for the type of container\n",
     "3. Size_Grade - The class of the produce according to their quality\n",
@@ -85,21 +96,21 @@
     "7. Sales_Total - The total sales price\n",
     "8. Total_Qty_Sold - The number of produce sold\n",
     "9. Total_Kg_Sold - The total weight of the produce sold in kilograms\n",
-    "10. Stock_On_Hand - The amount of produce the store has"
+    "10. Stock_On_Hand - The amount of produce the store has`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Importing Data and Plotting <a name=\"import\"></a>"
+    "## 2. Exploratory Data Analysis <a name=\"import\"></a>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.1. Import necessary packages"
+    "#### 2.1. Importing the necessary packages"
    ]
   },
   {
@@ -125,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.2. Import the data into a Pandas Dataframe"
+    "#### 2.2. Importing the data into a Pandas Dataframe"
    ]
   },
   {
@@ -154,14 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.3. Show the data "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### 2.3.1 Showing the training data"
+    "#### 2.3. Showing the table head"
    ]
   },
   {
@@ -327,7 +331,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.4. Make an initial plot of the data"
+    "#### 2.4. Making initial plots of the data to learn more of the data"
    ]
   },
   {
@@ -350,14 +354,14 @@
     "plt.scatter(train_set[\"avg_price_per_kg\"], train_set['Weight_Kg'])\n",
     "plt.ylabel(\"Weight(Kg)\")\n",
     "plt.xlabel(\"avg_price_per_kg\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We note that most of the apples have a low weight and a few have a high weight."
+    "We note that most of the apples have a low weight and a few have a high weight of exactly 400 with no values inbetween."
    ]
   },
   {
@@ -1040,7 +1044,6 @@
     "We see that the 1S size_Grade is the most sold."
    ]
   },
-
   {
    "cell_type": "markdown",
    "metadata": {},
@@ -5298,8 +5301,6 @@
     "print('Formula:\\n\\t{}'.format(formula_str))"
    ]
   },
-
-
   {
    "cell_type": "markdown",
    "metadata": {},
