Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -152,6 +152,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.3. Showing the table head filtered for Apple Golden Delicious\n",
+    "We filter for Apple Golden Delicious, becuase we noted that out testing data only considers this commodity."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -159,13 +167,6 @@
    "source": [
     "#Filter for Commodity of interest in train set\n",
     "train_set = train_set[train_set[\"Commodities\"]==\"APPLE GOLDEN DELICIOUS\"]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 2.3. Showing the table head"
    ]
   },
   {
@@ -361,7 +362,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We note that most of the apples have a low weight and a few have a high weight of exactly 400 with no values inbetween."
+    "We note that most of the apples have a weight lower than 25 kilogram and a few have a high weight of exactly 400 kilogram with no values inbetween. Apples at exactly 400 kg are considerable lower priced. We also note one outlier where an apple was sold for near R25."
    ]
   },
   {
@@ -384,14 +385,14 @@
     "plt.scatter(train_set['avg_price_per_kg'], train_set['Total_Qty_Sold'])\n",
     "plt.ylabel(\"Total_Qty_Sold\")\n",
     "plt.xlabel(\"avg_price_per_kg\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We observe that for most of the average prices the total quantity sold is densley populated between 0-2000. There are a few outliers."
+    "We observe that for most of the average prices of apples per kilogram the total quantity sold is densley populated between 0-2000 apples with prices between R0-R15. There are a few outliers."
    ]
   },
   {
@@ -414,8 +415,7 @@
     "plt.scatter(train_set['avg_price_per_kg'], train_set['Sales_Total'])\n",
     "plt.ylabel(\"Sales Total\")\n",
     "plt.xlabel(\"avg_price_per_kg\")\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
