Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -84,7 +84,7 @@
    "metadata": {},
    "source": [
     "### 1.4. Data source and descriptions\n",
-    "The data is provided for us on Kaggle in the form of two CSV files which is available to download. The data consists of 10 columns and is described as follows:\n",
+    "The data is provided for us on Kaggle in the form of a CSV file which is available to download. The data consists of 10 columns and is described as follows:\n",
     "1. Province - Which province the produce was grown\n",
     "2. Container - The code for the type of container\n",
     "3. Size_Grade - The class of the produce according to their quality\n",
