--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Regression Model that Predicts Apple Prices Based on Historical Data"
+    "# 1 Regression Model that Predicts Apple Prices Based on Historical Data"
    ]
   },
   {
