Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1 Regression Model that Predicts Apple Prices Based on Historical Data"
+    "# Regression Model that Predicts Apple Prices Based on Historical Data"
    ]
   },
   {
@@ -3359,11 +3359,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LR_submit = LinearRegression()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "LR"
+    "LR_submit.fit()"
    ]
   },
   {
