Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -2921,11 +2921,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 111,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-111-da48a4e6a78f>:1: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
+      "  X_train, X_test, y_train, y_test = np.array(train_test_split(X, y, test_size=0.2, random_state=50))\n"
+     ]
+    }
+   ],
    "source": [
     "X_train, X_test, y_train, y_test = np.array(train_test_split(X, y, test_size=0.2, random_state=50))"
    ]
@@ -3359,11 +3368,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\stanj\\Atom\\Anacondas\\lib\\site-packages\\sklearn\\utils\\validation.py:67: FutureWarning: Pass fit_intercept=     Index              Province Container Size_Grade  Weight_Kg  \\\n",
+      "0        1  W.CAPE-BERGRIVER ETC     EC120         1M       12.0   \n",
+      "1        2  W.CAPE-BERGRIVER ETC     M4183         1X       18.3   \n",
+      "2        3  W.CAPE-BERGRIVER ETC     EC120         1S       12.0   \n",
+      "3        4  W.CAPE-BERGRIVER ETC     M4183         1M       18.3   \n",
+      "4        5  W.CAPE-BERGRIVER ETC     M4183         1L       18.3   \n",
+      "..     ...                   ...       ...        ...        ...   \n",
+      "680    681  W.CAPE-BERGRIVER ETC     JE090         2S        9.0   \n",
+      "681    682                  CAPE     EC120         1M       12.0   \n",
+      "682    683  W.CAPE-BERGRIVER ETC     JE090         2X        9.0   \n",
+      "683    684                  CAPE     M4183         1S       18.3   \n",
+      "684    685                  CAPE     M4183         1S       18.3   \n",
+      "\n",
+      "                Commodities        Date  Low_Price  High_Price  Sales_Total  \\\n",
+      "0    APPLE GOLDEN DELICIOUS  2020-07-09      128.0       136.0       5008.0   \n",
+      "1    APPLE GOLDEN DELICIOUS  2020-01-20      220.0       220.0       1760.0   \n",
+      "2    APPLE GOLDEN DELICIOUS  2020-08-19      120.0       120.0        720.0   \n",
+      "3    APPLE GOLDEN DELICIOUS  2020-05-06      160.0       160.0        160.0   \n",
+      "4    APPLE GOLDEN DELICIOUS  2020-05-04      140.0       160.0      14140.0   \n",
+      "..                      ...         ...        ...         ...          ...   \n",
+      "680  APPLE GOLDEN DELICIOUS  2020-05-26       30.0        30.0       1320.0   \n",
+      "681  APPLE GOLDEN DELICIOUS  2020-01-10       50.0       132.0       6290.0   \n",
+      "682  APPLE GOLDEN DELICIOUS  2020-06-03       55.0        55.0        220.0   \n",
+      "683  APPLE GOLDEN DELICIOUS  2020-02-22      120.0       150.0      27840.0   \n",
+      "684  APPLE GOLDEN DELICIOUS  2020-03-04      120.0       160.0      71010.0   \n",
+      "\n",
+      "     Total_Qty_Sold  Total_Kg_Sold  Stock_On_Hand  \n",
+      "0                38          456.0              0  \n",
+      "1                 8          146.4              2  \n",
+      "2                 6           72.0             45  \n",
+      "3                 1           18.3              8  \n",
+      "4               100         1830.0             19  \n",
+      "..              ...            ...            ...  \n",
+      "680              44          396.0            856  \n",
+      "681              52          624.0            785  \n",
+      "682               4           36.0            170  \n",
+      "683             202         3696.6              0  \n",
+      "684             491         8985.3              0  \n",
+      "\n",
+      "[685 rows x 13 columns] as keyword args. From version 0.25 passing these as positional arguments will result in an error\n",
+      "  warnings.warn(\"Pass {} as keyword args. From version 0.25 \"\n"
+     ]
+    }
+   ],
    "source": [
-    "LR_submit = LinearRegression()"
+    "LR_submit = LinearRegression(test_set)"
    ]
   },
   {
