Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -3865,7 +3865,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Fitting the model with the submission testing data"
+    "#### Making predictions on the test data"
    ]
   },
   {
@@ -4151,6 +4151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Making the prediction\n",
     "y_submission = LR_test.predict(test_submission_set)"
    ]
   },
@@ -4160,6 +4161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Creating an index list\n",
     "index_list = []\n",
     "for i in range(1,686):\n",
     "    index_list.append(i)"
@@ -4167,16 +4169,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
-    "LR_submission_DF = pd.DataFrame({'Index' : index_list, 'avg': y_submission})"
+    "#Putting the predictions with the index in a DataFrame\n",
+    "LR_submission_DF = pd.DataFrame({'Index' : index_list, 'avg_price_per_kg': y_submission})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -4201,7 +4204,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Index</th>\n",
-       "      <th>avg</th>\n",
+       "      <th>avg_price_per_kg</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -4266,53 +4269,40 @@
        "</div>"
       ],
       "text/plain": [
-       "     Index       avg\n",
-       "0        1  8.951241\n",
-       "1        2  9.359276\n",
-       "2        3  8.635499\n",
-       "3        4  7.711312\n",
-       "4        5  8.604217\n",
-       "..     ...       ...\n",
-       "680    681  5.689205\n",
-       "681    682  8.623981\n",
-       "682    683  6.765711\n",
-       "683    684  8.532955\n",
-       "684    685  7.075496\n",
+       "     Index  avg_price_per_kg\n",
+       "0        1          8.951241\n",
+       "1        2          9.359276\n",
+       "2        3          8.635499\n",
+       "3        4          7.711312\n",
+       "4        5          8.604217\n",
+       "..     ...               ...\n",
+       "680    681          5.689205\n",
+       "681    682          8.623981\n",
+       "682    683          6.765711\n",
+       "683    684          8.532955\n",
+       "684    685          7.075496\n",
        "\n",
        "[685 rows x 2 columns]"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "LR_submission_DF"
+    "#Displaying the predictions DataFrame\n",
+    "LR_submission_DF.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 171,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'C:\\\\Users\\\\stanj\\\\Documents\\\\GitHub\\\\regression-apples-predict-api-template.csv\\\\LR_submission_DF'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-163-e5e782f684c6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mLR_submission_DF\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mr'C:\\Users\\stanj\\Documents\\GitHub\\regression-apples-predict-api-template.csv\\LR_submission_DF'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\Atom\\Anacondas\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36mto_csv\u001b[1;34m(self, path_or_buf, sep, na_rep, float_format, columns, header, index, index_label, mode, encoding, compression, quoting, quotechar, line_terminator, chunksize, date_format, doublequote, escapechar, decimal, errors)\u001b[0m\n\u001b[0;32m   3168\u001b[0m             \u001b[0mdecimal\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdecimal\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3169\u001b[0m         )\n\u001b[1;32m-> 3170\u001b[1;33m         \u001b[0mformatter\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msave\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3171\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3172\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mpath_or_buf\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Atom\\Anacondas\\lib\\site-packages\\pandas\\io\\formats\\csvs.py\u001b[0m in \u001b[0;36msave\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    183\u001b[0m             \u001b[0mclose\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    184\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 185\u001b[1;33m             f, handles = get_handle(\n\u001b[0m\u001b[0;32m    186\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath_or_buf\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    187\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Atom\\Anacondas\\lib\\site-packages\\pandas\\io\\common.py\u001b[0m in \u001b[0;36mget_handle\u001b[1;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors)\u001b[0m\n\u001b[0;32m    491\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mencoding\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    492\u001b[0m             \u001b[1;31m# Encoding\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 493\u001b[1;33m             \u001b[0mf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath_or_buf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mencoding\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnewline\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    494\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0mis_text\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    495\u001b[0m             \u001b[1;31m# No explicit encoding\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'C:\\\\Users\\\\stanj\\\\Documents\\\\GitHub\\\\regression-apples-predict-api-template.csv\\\\LR_submission_DF'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "LR_submission_DF.to_csv(r'C:\\Users\\stanj\\Documents\\GitHub\\regression-apples-predict-api-template.c\\LR_submission_DF')"
+    "#Saving the DataFrame as as csv\n",
+    "LR_submission_DF.to_csv(r'C:\\Users\\stanj\\Documents\\GitHub\\regression-apples-predict-api-template\\LR_submission_DF.csv', index = False)"
    ]
   },
   {
