Update Linear Regression team TS2.ipynb

--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -4633,8 +4633,7 @@
    ],
    "source": [
     "y_pred = regr_tree.predict(X_test)\n",
-    "print(\"RMSE: \", np.sqrt(mean_squared_error(y_test,y_pred)))\n",
-    "\n"
+    "print(\"RMSE: \", np.sqrt(mean_squared_error(y_test,y_pred)))"
    ]
   },
   {
