--- a/Linear Regression team TS2.ipynb
+++ b/Linear Regression team TS2.ipynb
@@ -4538,7 +4538,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4552,7 +4559,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Instantiate support vector regression model\n",
+    "a Instantiate support vector regression model\n",
     "sv_reg_test = SVR(kernel='rbf', gamma='auto')"
    ]
   },
